Fixed name errors

--- a/smart_cage_data_writer/setup.cfg
+++ b/smart_cage_data_writer/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/tunnel
+script-dir=$base/lib/smart_cage_data_writer
 [install]
-install-scripts=$base/lib/tunnel
+install-scripts=$base/lib/smart_cage_data_writer
