Add LickportState and LickportTarget

--- a/smart_cage_msgs/CMakeLists.txt
+++ b/smart_cage_msgs/CMakeLists.txt
@@ -23,6 +23,8 @@ find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 
 set(msg_files
+  "msg/LickportState.msg"
+  "msg/LickportTarget.msg"
   "msg/TunnelState.msg"
   )
 
