--- a/smart_cage_data_writer/package.xml
+++ b/smart_cage_data_writer/package.xml
@@ -15,6 +15,7 @@
   <exec_depend>rosidl_runtime_py</exec_depend>
   <exec_depend>phidgets_python_api</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>smart_cage_msgs</exec_depend>
 
   <buildtool_depend>ament_python</buildtool_depend>
