--- a/smart_cage_data_writer/package.xml
+++ b/smart_cage_data_writer/package.xml
@@ -17,6 +17,7 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>smart_cage_msgs</exec_depend>
+  <exec_depend>vision_opencv</exec_depend>
 
   <buildtool_depend>ament_python</buildtool_depend>
 
