Add smart cage node

--- a/smart_cage/package.xml
+++ b/smart_cage/package.xml
@@ -12,15 +12,19 @@
   <author>Peter Polidoro</author>
 
   <exec_depend>phidgets_python_api</exec_depend>
-  <exec_depend>joint_control_msgs</exec_depend>
   <exec_depend>lickport</exec_depend>
   <exec_depend>tunnel</exec_depend>
   <exec_depend>smart_cage_msgs</exec_depend>
   <exec_depend>smart_cage_data_writer</exec_depend>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_python</buildtool_depend>
+
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <build_type>ament_python</build_type>
   </export>
 </package>
