--- a/smart_cage_msgs/CMakeLists.txt
+++ b/smart_cage_msgs/CMakeLists.txt
@@ -26,6 +26,7 @@ set(msg_files
   "msg/DataWriterControl.msg"
   "msg/LickportControl.msg"
   "msg/LickportState.msg"
+  "msg/StartNewTrainingPeriod.msg"
   "msg/TunnelControl.msg"
   "msg/TunnelState.msg"
   )
