start new -> create

--- a/smart_cage_msgs/CMakeLists.txt
+++ b/smart_cage_msgs/CMakeLists.txt
@@ -26,8 +26,8 @@ set(msg_files
   "msg/DataWriterControl.msg"
   "msg/LickportControl.msg"
   "msg/LickportState.msg"
-  "msg/StartNewSession.msg"
-  "msg/StartNewTrainingPeriod.msg"
+  "msg/Session.msg"
+  "msg/TrainingPeriod.msg"
   "msg/TunnelControl.msg"
   "msg/TunnelState.msg"
   )
