Update email address

--- a/smart_cage_msgs/package.xml
+++ b/smart_cage_msgs/package.xml
@@ -4,7 +4,7 @@
   <name>smart_cage_msgs</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="peterpolidoro@gmail.com">Peter Polidoro</maintainer>
+  <maintainer email="peter@polidoro.io">Peter Polidoro</maintainer>
   <license>BSD</license>
 
   <author>Peter Polidoro</author>
